--- a/index.html
+++ b/index.html
@@ -12,37 +12,16 @@
         <p>Sound Artist</p>
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="synthesizer.html">Synthesizer</a></li>
+            <li><a href="lissajousPattern.html">Lissajous Pattern</a></li>
+        </ul>
+    </nav>
+
     <main>
-        <h2>Synthesizer</h2>
-        <div class="synth-controls">
-            <label for="waveform">Waveform:</label>
-            <select id="waveform">
-                <option value="sine">Sine</option>
-                <option value="square">Square</option>
-                <option value="triangle">Triangle</option>
-                <option value="sawtooth">Sawtooth</option>
-            </select>
-
-            <label for="pitch">Pitch (Hz):</label>
-            <input type="range" id="pitch" min="100" max="1000" value="440">
-
-            <h3>ADSR</h3>
-            <label for="attack">Attack:</label>
-            <input type="range" id="attack" min="0" max="1" step="0.01" value="0.1">
-
-            <label for="decay">Decay:</label>
-            <input type="range" id="decay" min="0" max="1" step="0.01" value="0.1">
-
-            <label for="sustain">Sustain:</label>
-            <input type="range" id="sustain" min="0" max="1" step="0.01" value="0.5">
-
-            <label for="release">Release:</label>
-            <input type="range" id="release" min="0" max="2" step="0.01" value="0.5">
-
-            <button id="playBtn">Play Sound</button>
-        </div>
+        <h2>Welcome to Longman's Page</h2>
+        <p>Explore my sound creations and interactive visualizations.</p>
     </main>
-
-    <script src="script.js"></script>
 </body>
 </html>
