--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <ul>
             <li><a href="synthesizer.html">Synthesizer</a></li>
             <li><a href="lissajousPattern.html">Lissajous Pattern</a></li>
+            <li><a href="color.html">Color</a></li>
+            <li><a href="color2.html">Color 2</a></li>
+            <li><a href="GSLStest.html">GSL Test</a></li>
         </ul>
     </nav>
 
