add memory link

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="color.html">Color</a></li>
             <li><a href="color2.html">Color 2</a></li>
             <li><a href="GSLStest.html">GSL Test</a></li>
+            <li><a href="memory.html">Memory Test</a></li>
         </ul>
     </nav>
 
