--- a/index.html
+++ b/index.html
@@ -76,13 +76,41 @@
     const cube = new THREE.Mesh(geometry, materials);
     scene.add(cube);
 
-    camera.position.z = 3; // Distance from the cube
+    function easeOutQuint(t) {
+      return 1 + (--t) * t * t * t * t;
+    }
+
+    var Posz_start = 50;
+    var Posz_end = 4.5;
+    var Posy_start = 40;
+    var Posy_end = -0.333;
+    const approachDuration = 3000;
+    camera.position.z = Posz_start;
+    camera.position.y = Posy_start;
+
+    // Start with a random angle
+    cube.rotation.x = Math.random() * Math.PI * 2;
+    cube.rotation.y = Math.random() * Math.PI * 2;
+
+    const startTime = Date.now();
 
     const animate = function () {
       requestAnimationFrame(animate);
 
-      cube.rotation.x += 0.003; // Rotation speed
-      cube.rotation.y += 0.002; // Rotation speed
+      const elapsedTime = Date.now() - startTime;
+      if (elapsedTime < approachDuration) {
+        const t = elapsedTime / approachDuration;
+        const easedT = easeOutQuint(t);
+        camera.position.z = Posz_start - ((Posz_start - Posz_end) * easedT); // Approach to z = 4.5
+        camera.position.y = Posy_start + ((Posy_end - Posy_start) * easedT); // Approach to y = 0
+        cube.rotation.x += 0.06 * (1 - easedT) + 0.003 * easedT; // Ease into constant rotation speed
+        cube.rotation.y += 0.04 * (1 - easedT) + 0.002 * easedT; // Ease into constant rotation speed
+      } else {
+        camera.position.z = Posz_end; // Final position
+        camera.position.y = Posy_end; // Final position
+        cube.rotation.x += 0.003; // Constant rotation speed
+        cube.rotation.y += 0.002; // Constant rotation speed
+      }
 
       renderer.render(scene, camera);
     };
