--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>QR Clock Cube</title>
+  <title>Spectrogram Visualization</title>
   <style>
     body {
       margin: 0;
@@ -15,6 +15,7 @@
 <body>
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.0/build/qrcode.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script src="spectrogram.js"></script>
   <script>
     const scene = new THREE.Scene();
     const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
@@ -67,8 +68,18 @@
 
           const texture = new THREE.CanvasTexture(qrCanvas);
           for (let i = 0; i < 6; i++) {
-            materials[i] = new THREE.MeshBasicMaterial({ map: texture });
+            materials[i] = new THREE.MeshStandardMaterial({
+              map: texture,
+              envMap: scene.background,
+              metalness: 0.25,
+              roughness: 0.5,
+              reflectivity: 1,
+              clearcoat: 0.5,
+              clearcoatRoughness: 0,
+              envMapIntensity: 1,
+            });
           }
+          cube.material = materials;
         }
       );
     }
@@ -134,6 +145,63 @@
     const pointLight = new THREE.PointLight(0xffffff, 1, 100);
     pointLight.position.set(10, 10, 10);
     scene.add(pointLight);
+
+    // Create an audio context
+    const audioContext = new (window.AudioContext || window.webkitAudioContext)();
+    const analyser = audioContext.createAnalyser();
+    analyser.fftSize = 4096;
+    const bufferLength = analyser.frequencyBinCount;
+    const dataArray = new Uint8Array(bufferLength);
+
+    // Create a canvas for the spectrogram
+    const spectrogramCanvas = document.createElement('canvas');
+    spectrogramCanvas.width = window.innerWidth;
+    spectrogramCanvas.height = window.innerHeight;
+    const spectrogramContext = spectrogramCanvas.getContext('2d');
+    document.body.appendChild(spectrogramCanvas);
+
+    // Get user media
+    navigator.mediaDevices.getUserMedia({ audio: true }).then(stream => {
+      const source = audioContext.createMediaStreamSource(stream);
+      source.connect(analyser);
+    });
+
+    // Create a particle system for the background
+    const particleCount = 5000;
+    const particles = new THREE.BufferGeometry();
+    const particlePositions = new Float32Array(particleCount * 3);
+
+    for (let i = 0; i < particleCount; i++) {
+      const x = Math.random() * 2000 - 1000;
+      const y = Math.random() * 2000 - 1000;
+      const z = Math.random() * 2000 - 1000;
+
+      particlePositions[i * 3] = x;
+      particlePositions[i * 3 + 1] = y;
+      particlePositions[i * 3 + 2] = z;
+    }
+
+    particles.setAttribute('position', new THREE.BufferAttribute(particlePositions, 3));
+
+    const particleMaterial = new THREE.PointsMaterial({
+      color: 0x888888,
+      size: 1,
+      transparent: true,
+      opacity: 0.7,
+    });
+
+    const particleSystem = new THREE.Points(particles, particleMaterial);
+    scene.add(particleSystem);
+
+    function animateParticles() {
+      requestAnimationFrame(animateParticles);
+
+      particleSystem.rotation.y += 0.001;
+
+      renderer.render(scene, camera);
+    }
+
+    animateParticles();
   </script>
 </body>
 </html>
