--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
       position: absolute;
       width: 100%;
       text-align: center;
-      font-size: 1.5rem; /* Tailwind's text-2xl is 1.5rem */
-      font-family: 'Georgia', serif; /* Use the imported font */
+      font-size: 1.5rem;
+      font-family: 'Georgia', serif;
       color: #FDF5E6;
-      opacity: 0; /* Set to 1 for testing */
+      opacity: 0;
       transition: opacity 0.5s;
       bottom: 33%;
     }
   </style>
 </head>
 <body class="m-0 overflow-hidden bg-white">
-  <div id="text1" class="prompt">What is it? Time.</div>
-  <div id="text2" class="prompt">🤷🏻‍♂️</div>
-  <div id="text3" class="prompt">What time is it?</div>
-  <div id="text4" class="prompt">✅</div>
+  <div id="text1" class="prompt">Time. What is it?</div>
+  <div id="text2" class="prompt"></div>
+  <div id="text3" class="prompt">Come on.</div>
+  <div id="text4" class="prompt">I mean what time is it?</div>
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.0/build/qrcode.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="qrCoder.js"></script>
