--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div id="text1" class="prompt">Time. What is it?</div>
   <div id="text2" class="prompt"></div>
   <div id="text3" class="prompt">Come on.</div>
-  <div id="text4" class="prompt">I mean what time is it?</div>
+  <div id="text4" class="prompt">What time is it?</div>
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.0/build/qrcode.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="qrCoder.js"></script>
