Add audio playback and adjust animation timings

--- a/index.html
+++ b/index.html
@@ -30,5 +30,11 @@
   <script src="qrCoder.js"></script>
   <script src="qrThree.js"></script>
   <script src="textAnimation.js"></script>
+  <script>
+    const audio = new Audio('music/qrClock.wav');
+    setTimeout(() => {
+      audio.play();
+    }, 5000);
+  </script>
 </body>
 </html>
