--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
       transition: opacity 0.5s;
       bottom: 33%;
     }
+    .play-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #FDF5E6;
+      border: none;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      font-size: 1.5rem;
+      color: #002040;
+      cursor: pointer;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
   </style>
 </head>
 <body class="m-0 overflow-hidden bg-white">
@@ -25,6 +39,7 @@
   <div id="text2" class="prompt"></div>
   <div id="text3" class="prompt">Come on.</div>
   <div id="text4" class="prompt">What time is it?</div>
+  <button id="playButton" class="play-button">▶️</button>
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.0/build/qrcode.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="qrCoder.js"></script>
@@ -32,8 +47,17 @@
   <script src="textAnimation.js"></script>
   <script>
     const audio = new Audio('music/qrClock.wav');
-    setTimeout(() => {
+    const playButton = document.getElementById('playButton');
+
+    playButton.addEventListener('click', () => {
       audio.play();
+      playButton.style.display = 'none';
+    });
+
+    setTimeout(() => {
+      audio.play().catch(() => {
+        playButton.style.display = 'block';
+      });
     }, 5000);
   </script>
 </body>
